# AgentKit

./: .gitignore
agentkit/agentkit-samples-main/: .gitignore  .markdownlint-cli2.jsonc  NOTICE
agentkit/agentkit-samples-main/.github/workflows/: copybara-pr-handler.yml
agentkit/agentkit-samples-main/01-tutorials/tutorial_quality/: __init__.py  cli.py  env_audit.py  inventory.py  models.py  notebook_audit.py  report.py  requirements_audit.py
agentkit/agentkit-samples-main/02-use-cases/ai_coding/: README.md
agentkit/agentkit-samples-main/02-use-cases/content_safety/: README.md
agentkit/agentkit-samples-main/02-use-cases/customer_support/: README.md  agent.py
agentkit/agentkit-samples-main/02-use-cases/inspection_assistant/: README.md
agentkit/agentkit-samples-main/02-use-cases/sample_quality/: __init__.py  cli.py  dependency_audit.py  inventory.py  models.py
agentkit/agentkit-samples-main/02-use-cases/stock_analysis/: pyproject.toml  requirements.txt
agentkit/agentkit-samples-main/02-use-cases/travel_planner/: README.md  requirements.txt
agentkit/agentkit-samples-main/python/01-tutorials/01-agentkit-runtime/hello_world/: README.md  README_en.md  agent.py  client.py  pyproject.toml  requirements.txt
agentkit/agentkit-samples-main/python/01-tutorials/01-agentkit-runtime/hello_world/prompts/: prompt.py
agentkit/agentkit-samples-main/python/01-tutorials/05-agentkit-memory/viking_memory/: README.md  README_en.md  agent.py  local_test.py  pyproject.toml  requirements.txt
agentkit/agentkit-samples-main/python/02-use-cases/coffee_order/: agent.py  pyproject.toml  requirements.txt
agentkit/agentkit-samples-main/python/02-use-cases/customer_support/: README.md  README_en.md  agent.py  pyproject.toml  requirements.txt
agentkit/agentkit-samples-main/python/02-use-cases/customer_support/tools/: crm_mock.py
agentkit/agentkit-samples-main/python/02-use-cases/data_analysis_with_datalake/: agent.py  client.py  pyproject.toml  requirements.txt
agentkit/agentkit-samples-main/python/02-use-cases/data_analysis_with_datalake/tools/: utils.py
agentkit/agentkit-samples-main/python/02-use-cases/partners/video_breakdown_agent/: README.md  pyproject.toml  requirements.txt
agentkit/agentkit-samples-main/python/02-use-cases/restaurant_ordering/: README.md  README_en.md  agent.py  pyproject.toml
agentkit/agentkit-samples-main/python/02-use-cases/video_gen/: README.md  README_en.md  agent.yaml  consts.py  pyproject.toml  requirements.txt
agentkit/agentkit-samples-main/skills/byted-acep-api/: SKILL.md  pyproject.toml
agentkit/agentkit-samples-main/skills/byted-acep-api/scripts/: vephone_cli.py
agentkit/agentkit-samples-main/skills/byted-acep-api/scripts/core/: __init__.py  apps.py  cli_common.py  dcs.py  display_layouts.py  generic.py  hosts.py  images.py  instance_controls.py  instance_properties.py  instances.py  network.py  products.py  resources.py  tags.py  tasks.py  vephone_client.py
agentkit/agentkit-samples-main/skills/byted-sol-stability-architecture-path-extractor/: SKILL.md  prompt.md  pyproject.toml
agentkit/agentkit-samples-main/skills/byted-sol-stability-architecture-path-extractor/src/architecture_path_extractor/: classifier.py  cli.py  exporter.py  inputs.py  models.py  observability_gap.py  path_builder.py  pipeline.py  risk_analyzer.py
agentkit/agentkit-samples-main/skills/byted-sol-stability-architecture-path-extractor/src/architecture_path_extractor/extractors/: api_parser.py  config_parser.py  dependency_parser.py  doc_diagram_parser.py  repo_scanner.py
agentkit/agentkit-samples-main/skills/byted-sol-stability-grafana-dashboard-assembly/: SKILL.md  prompt.md  pyproject.toml
agentkit/agentkit-samples-main/skills/byted-sol-stability-grafana-dashboard-assembly/src/grafana_dashboard_assembly_skill/: acceptance.py  auto_repair.py  cli.py  connectivity_checker.py  exporter.py  input_normalizer.py  models.py  panel_quality_detector.py  pipeline.py  query_adapter.py  traceability.py  validator.py
agentkit/agentkit-samples-main/skills/byted-sol-stability-grafana-dashboard-assembly/src/grafana_dashboard_assembly_skill/adapters/: __init__.py  catalog_adapter.py  dashboard_adapter.py  log_adapter.py  mapping_adapter.py  sli_adapter.py  trace_adapter.py
agentkit/agentkit-samples-main/skills/byted-sol-stability-grafana-metric-explorer/: SKILL.md  prompt.md  pyproject.toml
agentkit/agentkit-samples-main/skills/byted-sol-stability-grafana-metric-explorer/src/grafana_dashboard_design_skill/: cli.py  dashboard_builder.py  models.py  panel_compiler.py  pipeline.py  traceability.py  validator.py
agentkit/agentkit-samples-main/skills/byted-sol-stability-grafana-metric-explorer/src/grafana_dashboard_design_skill/adapters/: __init__.py  arch_adapter.py  metric_adapter.py  sli_adapter.py
agentkit/agentkit-samples-main/skills/byted-sol-stability-grafana-metric-explorer/src/grafana_metric_explorer_skill/: __init__.py  gap_diagnoser.py  models.py  query_templates.py  semantic_mapper.py
agentkit/agentkit-samples-main/skills/byted-sol-stability-observability-asset-governance/: SKILL.md  prompt.md  pyproject.toml
agentkit/agentkit-samples-main/skills/byted-sol-stability-observability-asset-governance/src/observability_asset_governance_skill/: __init__.py  asset_registry.py  cli.py  dashboard_drift_detector.py  definition_conflict_detector.py  duplicate_dashboard_detector.py  exporter.py  incremental_updater.py  input_normalizer.py  metric_drift_detector.py  models.py  pipeline.py  stale_panel_detector.py  traceability.py  usage_analyzer.py  validator.py
agentkit/agentkit-samples-main/skills/byted-sol-stability-sli-modeling/: SKILL.md  prompt.md  pyproject.toml
agentkit/agentkit-samples-main/skills/byted-sol-stability-sli-modeling/src/sli_modeling_skill/: __init__.py  cli.py  exporter.py  modeler.py  models.py
my-agentkit/: .gitignore
my-agentkit/first/: init_agent_project.py
my-agentkit/first_agent/: Dockerfile  Dockerfile.backup  agentkit.cloud.backup.yaml  first_agent.py  pyproject.toml
my-agentkit/sdk-tutorial/: step1_init.py
(+1027 files in other folders)
