[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vephone-cli"
version = "0.1.0"
description = "CLI for Volcengine Cloud Phone OpenAPI"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
vephone = "vephone_cli:main"

[tool.setuptools]
package-dir = {"" = "scripts"}
py-modules = ["vephone_cli"]

[tool.setuptools.packages.find]
where = ["scripts"]
include = ["core", "core.*"]
