[project]
name = "customer-support"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentkit-sdk-python==0.5.10",
    "google-adk[extensions]==1.32.0",
    "mem0ai",
    "veadk-python[extensions]==0.5.37",
    "litellm"
]
