[project]
name = "agentkit-restaurant-ordering-example"
version = "0.1.0"
description = "A restaurant ordering agent example using AgentKit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentkit-sdk-python==0.5.10",
    "google-adk==1.32.0",
    "litellm",
    "veadk-python==0.5.37",
]
