[project]
name = "video-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentkit-sdk-python==0.5.10",
    "google-adk==1.32.0",
    "veadk-python==0.5.37",
    "tos>=2.8.7",
    "volcengine-python-sdk>=4.0.31",
    "litellm"
]
