[project]
name = "vikingmem-simple"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk==1.32.0",
    "veadk-python[extensions]==0.5.37",
    "veadk-python==0.5.37",
    "agentkit-sdk-python==0.5.10",
    "litellm"

]
