[project]
name = "video-breakdown-agent"
version = "0.3.0"
description = "视频分镜拆解和前三秒钩子分析 AgentKit Agent（Multi-Agent 架构）"
requires-python = ">=3.12,<3.13"
dependencies = [
    # AgentKit 核心三件套
    "veadk-python==0.5.1",
    "google-adk==1.19.0",  # veadk-python 0.5.1 锁定此版本
    "agentkit-sdk-python==0.5.1",
    # HTTP 客户端
    "httpx>=0.26.0",
    # TOS 对象存储（视频上传）
    "tos>=2.8.7",
    # JSON 修复（format hook）
    "json-repair>=0.54.1",
    # 配置管理
    "python-dotenv>=1.0.0",
    # 生产模式服务器
    "uvicorn>=0.34.0",
    # Web 框架（A2A + MCP）
    "fastapi>=0.115.0",
    # MCP Server
    "fastmcp>=2.0.0",
    # 异步 HTTP
    "aiohttp>=3.11.0",
    # FFmpeg 二进制（随 Python 包分发，无需系统安装）
    "imageio-ffmpeg>=0.5.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["video_breakdown_agent"]
